--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -135,9 +135,17 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Supponiamo che una funzione <b>F</b> ammetta il punto fisso <b>p</b>.
             Il punto p è detto attrattore se esiste un intervallo <b>a < x < b</b> che contiene p tale che tutte le orbite generate dai punti contenuti in questo intervallo tendano a <b>p</b>.
-            (In altre parole <b>p</b> è un attrattore se tutti i punti sufficientemente vicini a <b>p</b> generano orbite che tendono a <b>p</b>).
-            Ad esempio considerata la funzione <b>T(x )= x<sup>2</sup></b>  con <b>x ∈ { |x| < 1}</b> (estremi esclusi) tendono al punto fisso 0. In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da <b>|x| < 1</b>.
-            </p>
+                (In altre parole <b>p</b> è un attrattore se tutti i punti sufficientemente vicini a <b>p</b> generano orbite che tendono a <b>p</b>).
+                Ad esempio considerata la funzione <b>T(x )= x<sup>2</sup></b>  con <b>x ∈ { |x| < 1}</b> (estremi esclusi) tendono al punto fisso 0.
+                    In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da <b>|x| < 1</b>.
+                        <br>
+                        <br>
+                        Un punto <b>p</b> è invece detto repulsore se i valori successivi delle orbite tendono ad allontanarsi sempre di più dal valore precedente.
+                        In altre parole, fissato un intervallo intorno al punto <b>p</b> dopo un determinato numero di reiterazioni il valore generato cade all’esterno dell’intervallo fissato.
+                        <br>
+                        <br>
+                        Consideriamo la funzione <b>F(x) = x<sup>2</sup> + x - 4</b>
+          </p>
         </div>
       </div>
     </div>
