--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -120,7 +120,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/13.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 13 <b>𝑓(x) = −x<sup>3</sup></b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 13 <b>F(x) = −x<sup>3</sup></b></p>
           </div>
         </div>
       </div>
@@ -160,6 +160,30 @@
             <img src="https://www.gabrielavelitch.com/img/caos/14.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 14 <b>F(x) = x<sup>2</sup> + x - 4</b></p>
           </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            I punti attrattori possono essere individuati facilmente con il calcolatore; più difficile evidenziare un punto repulsore.
+            <br>
+            <br>
+            La funzione <b>P(x)= x<sup>2</sup> − 0.5</b> ammette:
+          <ul>
+            <li>un punto fisso attrattore 𝑝↓1 = 1−√⁠3 /2 = −0.366025403784439</li>
+            <li>e un punto repulsore 𝑝↓2 = 1+√⁠3 /2  = 1.366025403784439</li>
+          </ul>
+          <br>
+          <br>
+          Considerando un punto qualsiasi che non sia il punto repulsore la reiterazione conduce al punto fisso <b>1 − √⁠3 / 2</b>.
+          Soltanto per il valore <b>1 + √⁠3 / 2</b>  l’iterazione porta rapidamente verso <b>+∞</b>.
+          </p>
         </div>
       </div>
     </div>
