--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -106,7 +106,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Nei paragrafi precedenti abbiamo visto che alcune orbite conducono ad un punto fisso, mentre altre oscillano periodicamente.
             Inoltre mentre alcune iterate conducono inesorabilmente verso un punto fisso, altre funzioni iterate conducono a punti fissi differenti, in base alle condizioni di inizio.
-            Consideriamo la funzione di partenza <b>𝑓(x) = −x<sup>3</sup></b>.
+            Consideriamo la funzione di partenza <b>F(x) = −x<sup>3</sup></b>.
           </p>
         </div>
       </div>
@@ -176,14 +176,28 @@
             <br>
             La funzione <b>P(x)= x<sup>2</sup> − 0.5</b> ammette:
           <ul>
-            <li>un punto fisso attrattore 𝑝↓1 = 1−√⁠3 /2 = −0.366025403784439</li>
-            <li>e un punto repulsore 𝑝↓2 = 1+√⁠3 /2  = 1.366025403784439</li>
+            <li>un punto fisso attrattore <b>p<sub>1</sub> = 1 − √⁠3 /2 = −0.366025403784439</b></li>
+            <li>e un punto repulsore <b>p<sub>2</sub> = 1 + √⁠3 /2  = 1.366025403784439</b></li>
           </ul>
           <br>
           <br>
           Considerando un punto qualsiasi che non sia il punto repulsore la reiterazione conduce al punto fisso <b>1 − √⁠3 / 2</b>.
           Soltanto per il valore <b>1 + √⁠3 / 2</b>  l’iterazione porta rapidamente verso <b>+∞</b>.
           </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/15.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 15 <b>P(x)= x<sup>2</sup> − 0.5</b></p>
+          </div>
         </div>
       </div>
     </div>
