--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -179,8 +179,7 @@
             <li>un punto fisso attrattore <b>p<sub>1</sub> = 1 − √⁠3 /2 = −0.366025403784439</b></li>
             <li>e un punto repulsore <b>p<sub>2</sub> = 1 + √⁠3 /2  = 1.366025403784439</b></li>
           </ul>
-          <br>
-          <br>
+          <p class="mbr-text mbr-fonts-style display-7">
           Considerando un punto qualsiasi che non sia il punto repulsore la reiterazione conduce al punto fisso <b>1 − √⁠3 / 2</b>.
           Soltanto per il valore <b>1 + √⁠3 / 2</b>  l’iterazione porta rapidamente verso <b>+∞</b>.
           </p>
@@ -197,6 +196,20 @@
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/15.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 15 <b>P(x)= x<sup>2</sup> − 0.5</b></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/16.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 16 <b>P(x)= x<sup>2</sup> − 0.5</b></p>
           </div>
         </div>
       </div>
