--- a/pages/learn/caos/01_03_equazione_logistica.html
+++ b/pages/learn/caos/01_03_equazione_logistica.html
@@ -86,14 +86,16 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    L’equazione logistica è un modello rudimentale, ma efficace, che descrive l’evoluzione di una popolazione in un sistema chiuso;
+                    la specie in esame può essere una coltura di batteri o della specie umana.
+                    Si descrive la popolazione come il rapporto tra gli individui che la compongono e il numero massimo degli individui consentito dall’ecosistema (popolazione limite).
+                    La popolazione limite L è determinata dalle dimensioni fisiche del laboratorio o dall’ambiente naturale nel quale la popolazione è confinata.
+                    Analogamente si può applicare ai parametri del suono o agli event rate.
                   </p>
                 </div>
             </div>
