--- a/pages/learn/caos/01_03_equazione_logistica.html
+++ b/pages/learn/caos/01_03_equazione_logistica.html
@@ -123,6 +123,7 @@
             L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione n.
             <br>
             L’equazione è:
+            <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
           </p>
         </div>
       </div>
