--- a/pages/learn/caos/01_03_equazione_logistica.html
+++ b/pages/learn/caos/01_03_equazione_logistica.html
@@ -123,7 +123,13 @@
             L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione n.
             <br>
             L’equazione è:
-            <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
+          <p class="mbr-text mbr-fonts-style display-7">
+            <b>c</b> è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
+            <b>c</b> assume solitamente valori da 0 a 4.
+            L’equazione fa parte delle funzioni quadratiche, con la <b>x ∈ [0…1]</b>:
+            <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
+
           </p>
         </div>
       </div>
