--- a/pages/learn/caos/01_03_equazione_logistica.html
+++ b/pages/learn/caos/01_03_equazione_logistica.html
@@ -120,9 +120,7 @@
             <b>P<sub>n</sub></b> avrà escursione da 0 (nessun sopravvissuto) ad 1 (raggiunta la popolazione limite).
             <br>
             <br>
-            L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione n.
-            <br>
-            L’equazione è:
+            L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione <b>n</b>. L’equazione è:
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
           <p class="mbr-text mbr-fonts-style display-7">
             <b>c</b> è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
