--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -127,13 +127,25 @@
             <b>c</b> assume solitamente valori da 0 a 4.
             L’equazione fa parte delle funzioni quadratiche, con la <b>x ∈ [0…1]</b>:
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
-
           </p>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/13.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 17 Equazone logistica</b></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- Prev/Next-->
@@ -141,8 +153,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_01_diagramma_delle_orbite.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
