--- a/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
+++ b/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
@@ -105,10 +105,9 @@
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
             Può essere utile visualizzare il comportamento dell’equazione logistica o di una equazione quadratica, al variare del parametro c, tenendo costante il punto di partenza.
-
             Il grafico corrispondente ha sulle ascisse il valore di c e sulle ordinate i valori dell’orbita, in base al valore di partenza fissato.
 
-            Consideriamo la funzione F(x) = x<sup>2</sup> + c e reiteriamola nel punto iniziale x = 0 esplorando i valori di c da -2 a 0.25.
+            Consideriamo la funzione F(x) = x<sup>2</sup> + c e reiteriamola nel punto iniziale $$x = 0$$S esplorando i valori di c da -2 a 0.25.
 
             Si osserva che per -0.75 < c < 0.25 è presente un solo punto fisso, quindi lo 0 è stato “attirato” da un unico punto fisso.
             In prossimità di -0.75 appare una prima biforcazione, con un ciclo di periodo 2.
@@ -248,6 +247,8 @@
     <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
       includeHTML();
     </script>
