--- a/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
+++ b/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
@@ -107,7 +107,7 @@
             Può essere utile visualizzare il comportamento dell’equazione logistica o di una equazione quadratica, al variare del parametro \(c\), tenendo costante il punto di partenza.
             Il grafico corrispondente ha sulle ascisse il valore di c e sulle ordinate i valori dell’orbita, in base al valore di partenza fissato.
 
-            Consideriamo la funzione \(F(x) = x^2 + c\)F(x) = x<sup>2</sup> + c e reiteriamola nel punto iniziale \(x = 0\) esplorando i valori di \(c\) da -2 a 0.25.
+            Consideriamo la funzione \(F(x) = x^2 + c\) e reiteriamola nel punto iniziale \(x = 0\) esplorando i valori di \(c\) da -2 a 0.25.
 
             Si osserva che per -0.75 < c < 0.25 è presente un solo punto fisso, quindi lo 0 è stato “attirato” da un unico punto fisso.
             In prossimità di -0.75 appare una prima biforcazione, con un ciclo di periodo 2.
