--- a/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
+++ b/pages/learn/caos/01_03_01_diagramma_delle_orbite.html
@@ -137,7 +137,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Se si effettua un ingrandimento, cioè si raffina lo step di c e si esplorano i valori per di c da -1.65 a -0.75 otteniamo il seguente diagramma delle orbite
+            Se si effettua un ingrandimento, cioè si raffina lo step di \(c\) e si esplorano i valori per di \(c\) da -1.65 a -0.75 otteniamo il seguente diagramma delle orbite
           </p>
         </div>
       </div>
