--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -111,20 +111,20 @@
             Analogamente si può applicare ai parametri del suono o agli event rate.
             <br>
             <br>
-            Si indica con <b>P<sub>n</sub></b> la frazione della popolazione limite in vita nel corso della <b>n<sup>-esima</sup></b> generazione.
+            Si indica con \(P_n\) la frazione della popolazione limite in vita nel corso della \(n^-esima\) generazione.
             <br>
             <br>
-            <b>P<sub>n</sub> = 0.5</b> indica che il numero degli individui che compongono la <b>n<sup>-esima</sup></b> generazione è pari a <b>L/2</b>.
+            \(P_n = 0.5\) indica che il numero degli individui che compongono la \(n^-esima\) generazione è pari a <b>L/2</b>.
             <br>
             <br>
             <b>P<sub>n</sub></b> avrà escursione da 0 (nessun sopravvissuto) ad 1 (raggiunta la popolazione limite).
             <br>
             <br>
-            L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione <b>n</b>. L’equazione è:
+            L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
           <p class="mbr-text mbr-fonts-style display-7">
-            <b>c</b> è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
-            <b>c</b> assume solitamente valori da 0 a 4.
+            \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
+            \(c\) assume solitamente valori da 0 a 4.
             L’equazione fa parte delle funzioni quadratiche, con la <b>x ∈ [0…1]</b>:
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
           </p>
