--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -114,13 +114,13 @@
             Si indica con \(P_n\) la frazione della popolazione limite in vita nel corso della \(n^-esima\) generazione.
             <br>
             <br>
-            \(P_n = 0.5\) indica che il numero degli individui che compongono la \(n^-esima\) generazione è pari a <b>L/2</b>.
+            \(P_n = 0.5\) indica che il numero degli individui che compongono la \(n^-esima\) generazione è pari a \(L/2\).
             <br>
             <br>
-            <b>P<sub>n</sub></b> avrà escursione da 0 (nessun sopravvissuto) ad 1 (raggiunta la popolazione limite).
+            \(P_n\) avrà escursione da 0 (nessun sopravvissuto) ad 1 (raggiunta la popolazione limite).
             <br>
             <br>
-            L’equazione logistica prevede quindi la popolazione alla generazione <b>n+1</b> in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
+            L’equazione logistica prevede quindi la popolazione alla generazione \(n+1\) in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
           <p class="mbr-text mbr-fonts-style display-7">
             \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
