--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -121,8 +121,7 @@
             <br>
             <br>
             L’equazione logistica prevede quindi la popolazione alla generazione \(n+1\) in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
-          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)</b></h3>
-          <p class="mbr-text mbr-fonts-style display-7">
+          $$P_n + 1 = c * P_n * (1 - P_n)$$P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)
             \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
             \(c\) assume solitamente valori da 0 a 4.
             L’equazione fa parte delle funzioni quadratiche, con la <b>x ∈ [0…1]</b>:
