--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -107,14 +107,14 @@
             L’equazione logistica è un modello rudimentale, ma efficace, che descrive l’evoluzione di una popolazione in un sistema chiuso;
             la specie in esame può essere una coltura di batteri o della specie umana.
             Si descrive la popolazione come il rapporto tra gli individui che la compongono e il numero massimo degli individui consentito dall’ecosistema (popolazione limite).
-            La popolazione limite L è determinata dalle dimensioni fisiche del laboratorio o dall’ambiente naturale nel quale la popolazione è confinata.
+            La popolazione limite \(L\) è determinata dalle dimensioni fisiche del laboratorio o dall’ambiente naturale nel quale la popolazione è confinata.
             Analogamente si può applicare ai parametri del suono o agli event rate.
             <br>
             <br>
-            Si indica con \(P_n\) la frazione della popolazione limite in vita nel corso della \(n^-esima\) generazione.
+            Si indica con \(P_n\) la frazione della popolazione limite in vita nel corso della \(n^{-esima}\) generazione.
             <br>
             <br>
-            \(P_n = 0.5\) indica che il numero degli individui che compongono la \(n^-esima\) generazione è pari a \(L/2\).
+            \(P_n = 0.5\) indica che il numero degli individui che compongono la \(n^{-esima}\) generazione è pari a \(L/2\).
             <br>
             <br>
             \(P_n\) avrà escursione da 0 (nessun sopravvissuto) ad 1 (raggiunta la popolazione limite).
@@ -124,7 +124,7 @@
           $$P_n + 1 = c * P_n * (1 - P_n)$$P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)
             \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
             \(c\) assume solitamente valori da 0 a 4.
-            L’equazione fa parte delle funzioni quadratiche, con la <b>x ∈ [0…1]</b>:
+            L’equazione fa parte delle funzioni quadratiche, con la \(x \in [0…1]\)<b>x ∈ [0…1]</b>:
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
           </p>
         </div>
