--- a/pages/learn/caos/01_03_00_equazione_logistica.html
+++ b/pages/learn/caos/01_03_00_equazione_logistica.html
@@ -121,11 +121,12 @@
             <br>
             <br>
             L’equazione logistica prevede quindi la popolazione alla generazione \(n+1\) in base alla conoscenza della popolazione alla generazione \(n\). L’equazione è:
-          $$P_n + 1 = c * P_n * (1 - P_n)$$P<sub>n</sub> + 1 = c ∙ P<sub>n</sub> ∙ (1 − P<sub>n</sub>)
+            $$P_n + 1 = c * P_n * (1 - P_n)$$
             \(c\) è una costante che dipende dai fattori ecologici, come la temperatura dell’ambiente o/e la quantità di risorse energetiche.
             \(c\) assume solitamente valori da 0 a 4.
-            L’equazione fa parte delle funzioni quadratiche, con la \(x \in [0…1]\)<b>x ∈ [0…1]</b>:
-            <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
+            L’equazione fa parte delle funzioni quadratiche, con la \(x \in [0…1]\):
+            $$F(x) = c * x (1 - x) = cx - cx^2$$
+          <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5"><b>F(x) = 𝑐 ∙ x ∙ (1 − x) = cx − cx<sup>2</sup></b></h3>
           </p>
         </div>
       </div>
