--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -104,12 +104,10 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Consideriamo la funzione non lineare <b>s(x) = √x</b>.
+            Consideriamo la funzione non lineare \(s(x) = \sqrt x\).
             <br>
             <br>
-            <h3>Esempio 1:
-              <br>
-              <b>x = 1</b></h3>
+            <h3>Esempio 1: \(x = 1\)</h3>
           </p>
         </div>
       </div>
