--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -138,9 +138,7 @@
             dell’iterazione. Vediamo cosa succede se ci spostiamo di poco.
             <br>
             <br>
-          <h3>Esempio 2:
-            <br>
-            <b>x = 1.30</b></h3>
+          <h3>Esempio 2: \(x = 1.30\)</h3>
           </p>
         </div>
       </div>
@@ -170,9 +168,7 @@
             Notiamo che al crescere dell’iterazione, la risposta tende al valore 1, cioè al <b>punto fisso</b>.
             <br>
             <br>
-            <h3>Esempio 3:
-              <br>
-              <b>x = 0.93</b></h3>
+            <h3>Esempio 3: \(x = 0.93\)</h3>
           </p>
         </div>
       </div>
@@ -202,9 +198,7 @@
             Al crescere dell’iterazione, anche in questo caso la risposta tende al valore 1, cioè al <b>punto fisso</b>.
             <br>
             <br>
-            <h3>Esempio 4:
-              <br>
-              <b>x = 0.2</b></h3>
+            <h3>Esempio 4: \(x = 0.2\)</h3>
           </p>
         </div>
       </div>
@@ -231,7 +225,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Anche con x = 0.2 si arriva rapidamente al punto fisso x = 1.
+            Anche con \(x = 0.2\) si arriva rapidamente al punto fisso \(x = 1\).
             <br>
             <br>
             L’insieme dei valori prodotti dalle successive iterazioni del valore di partenze viene detta <b>orbita del punto</b>.
@@ -294,6 +288,8 @@
     <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
       includeHTML();
     </script>
