--- a/pages/learn/caos/01_02_01_bacino_di_attrazione.html
+++ b/pages/learn/caos/01_02_01_bacino_di_attrazione.html
@@ -155,6 +155,8 @@
     <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script>
       includeHTML();
     </script>
