--- a/pages/learn/caos/01_02_01_bacino_di_attrazione.html
+++ b/pages/learn/caos/01_02_01_bacino_di_attrazione.html
@@ -110,7 +110,7 @@
             <br>
             Un orbita è l’insieme dei valori generati dalla reiterazione della funzione a partire da un punto del dominio.
             Un orbita è detta periodica (o ciclica) se dopo un certo numero N di iterazioni si ripresenta il valore di partenza.
-            Il punto <b>x<sub>0</sub></b> è detto punto periodico.
+            Il punto \(x_0\) è detto punto periodico.
             Il più piccolo intero N che soddisfa la condizione sopra dichiarata, è detto periodo primo dell’orbita.
           </p>
         </div>
