--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -106,7 +106,7 @@
           <p class="mbr-text mbr-fonts-style display-7">
             Nei paragrafi precedenti abbiamo visto che alcune orbite conducono ad un punto fisso, mentre altre oscillano periodicamente.
             Inoltre mentre alcune iterate conducono inesorabilmente verso un punto fisso, altre funzioni iterate conducono a punti fissi differenti, in base alle condizioni di inizio.
-            Consideriamo la funzione di partenza <b>F(x) = −x<sup>3</sup></b>.
+            Consideriamo la funzione di partenza \(F(x) = -x^3\).
           </p>
         </div>
       </div>
@@ -120,7 +120,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/13.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 13 <b>F(x) = −x<sup>3</sup></b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 13 \(F(x) = -x^3\)</p>
           </div>
         </div>
       </div>
@@ -133,15 +133,15 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Supponiamo che una funzione <b>F</b> ammetta il punto fisso <b>p</b>.
+            Supponiamo che una funzione \(F\) ammetta il punto fisso \(p\).
             Il punto p è detto attrattore se esiste un intervallo <b>a < x < b</b> che contiene p tale che tutte le orbite generate dai punti contenuti in questo intervallo tendano a <b>p</b>.
-                (In altre parole <b>p</b> è un attrattore se tutti i punti sufficientemente vicini a <b>p</b> generano orbite che tendono a <b>p</b>).
-                Ad esempio considerata la funzione <b>T(x )= x<sup>2</sup></b>  con <b>x ∈ { |x| < 1}</b> (estremi esclusi) tendono al punto fisso 0.
+                (In altre parole \(p\) è un attrattore se tutti i punti sufficientemente vicini a \(p\) generano orbite che tendono a \(p\)).
+                Ad esempio considerata la funzione \(T(x) = x^2\) con \(x \in { |x| < 1}\)<b>x ∈ { |x| < 1}</b> (estremi esclusi) tendono al punto fisso 0.
                     In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da <b>|x| < 1</b>.
                         <br>
                         <br>
-                        Un punto <b>p</b> è invece detto repulsore se i valori successivi delle orbite tendono ad allontanarsi sempre di più dal valore precedente.
-                        In altre parole, fissato un intervallo intorno al punto <b>p</b> dopo un determinato numero di reiterazioni il valore generato cade all’esterno dell’intervallo fissato.
+                        Un punto \(p\) è invece detto repulsore se i valori successivi delle orbite tendono ad allontanarsi sempre di più dal valore precedente.
+                        In altre parole, fissato un intervallo intorno al punto \(p\) dopo un determinato numero di reiterazioni il valore generato cade all’esterno dell’intervallo fissato.
                         <br>
                         <br>
                         Consideriamo la funzione <b>F(x) = x<sup>2</sup> + x - 4</b>
