--- a/pages/learn/caos/01_02_00_punto_fisso.html
+++ b/pages/learn/caos/01_02_00_punto_fisso.html
@@ -107,7 +107,9 @@
             Consideriamo la funzione non lineare \(s(x) = \sqrt x\).
             <br>
             <br>
-            <h3>Esempio 1: \(x = 1\)</h3>
+            <h3>Esempio 1:
+              <br>
+              \(x = 1\)</h3>
           </p>
         </div>
       </div>
@@ -121,7 +123,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/3.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 3 - s(1) = √1</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 3 - \(s(1) = \sqrt 1\)</p>
           </div>
         </div>
       </div>
@@ -138,7 +140,9 @@
             dell’iterazione. Vediamo cosa succede se ci spostiamo di poco.
             <br>
             <br>
-          <h3>Esempio 2: \(x = 1.30\)</h3>
+          <h3>Esempio 2:
+            <br>
+            \(x = 1.30\)</h3>
           </p>
         </div>
       </div>
@@ -152,7 +156,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/4.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 - s(1.30) = √1.30</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 4 - \(s(1.30) = \sqrt 1.30\)</p>
           </div>
         </div>
       </div>
@@ -168,7 +172,9 @@
             Notiamo che al crescere dell’iterazione, la risposta tende al valore 1, cioè al <b>punto fisso</b>.
             <br>
             <br>
-            <h3>Esempio 3: \(x = 0.93\)</h3>
+            <h3>Esempio 3:
+              <br>
+              \(x = 0.93\)</h3>
           </p>
         </div>
       </div>
@@ -182,7 +188,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/5.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5 - s(0.93) = √0.93</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 5 - \(s(0.93) = \sqrt 0.93\)</p>
           </div>
         </div>
       </div>
@@ -198,7 +204,9 @@
             Al crescere dell’iterazione, anche in questo caso la risposta tende al valore 1, cioè al <b>punto fisso</b>.
             <br>
             <br>
-            <h3>Esempio 4: \(x = 0.2\)</h3>
+            <h3>Esempio 4:
+              <br>
+              \(x = 0.2\)</h3>
           </p>
         </div>
       </div>
@@ -212,7 +220,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/6.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6 - s(0.2) = √0.2</p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 6 - \(s(0.2) = \sqrt 0.2\)</p>
           </div>
         </div>
       </div>
@@ -231,7 +239,7 @@
             L’insieme dei valori prodotti dalle successive iterazioni del valore di partenze viene detta <b>orbita del punto</b>.
             <br>
             <br>
-            Di seguito un programma in Python che stampa i valori dell’orbita della iterata della funzione <b>s(x) = √x</b>.
+            Di seguito un programma in Python che stampa i valori dell’orbita della iterata della funzione \(s(x) = \sqrt x\).
           </p>
         </div>
       </div>
