--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -136,7 +136,7 @@
             Supponiamo che una funzione \(F\) ammetta il punto fisso \(p\).
             Il punto p è detto attrattore se esiste un intervallo <b>a < x < b</b> che contiene p tale che tutte le orbite generate dai punti contenuti in questo intervallo tendano a <b>p</b>.
                 (In altre parole \(p\) è un attrattore se tutti i punti sufficientemente vicini a \(p\) generano orbite che tendono a \(p\)).
-                Ad esempio considerata la funzione \(T(x) = x^2\) con \(x \in { |x| < 1}\)<b>x ∈ { |x| < 1}</b> (estremi esclusi) tendono al punto fisso 0.
+                Ad esempio considerata la funzione \(T(x) = x^2\) con \(x \in \{ |x| < 1 \} \) (estremi esclusi) tendono al punto fisso 0.
                     In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da <b>|x| < 1</b>.
                         <br>
                         <br>
