--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -137,14 +137,14 @@
             Il punto p è detto attrattore se esiste un intervallo <b>a < x < b</b> che contiene p tale che tutte le orbite generate dai punti contenuti in questo intervallo tendano a <b>p</b>.
                 (In altre parole \(p\) è un attrattore se tutti i punti sufficientemente vicini a \(p\) generano orbite che tendono a \(p\)).
                 Ad esempio considerata la funzione \(T(x) = x^2\) con \(x \in \{ |x| < 1 \} \) (estremi esclusi) tendono al punto fisso 0.
-                    In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da <b>|x| < 1</b>.
+                    In questo caso il <a href="https://www.gabrielavelitch.com/pages/learn/caos/01_02_01_bacino_di_attrazione.html" target="_blank"><b>bacino di attrazione</b></a> è dato da \(|x| < 1 \).
                         <br>
                         <br>
                         Un punto \(p\) è invece detto repulsore se i valori successivi delle orbite tendono ad allontanarsi sempre di più dal valore precedente.
                         In altre parole, fissato un intervallo intorno al punto \(p\) dopo un determinato numero di reiterazioni il valore generato cade all’esterno dell’intervallo fissato.
                         <br>
                         <br>
-                        Consideriamo la funzione <b>F(x) = x<sup>2</sup> + x - 4</b>
+                        Consideriamo la funzione \(F(x) = x^2 + x - 4 \):
           </p>
         </div>
       </div>
@@ -158,7 +158,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/14.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 14 <b>F(x) = x<sup>2</sup> + x - 4</b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 14 \(F(x) = x^2 + x - 4 \)</p>
           </div>
         </div>
       </div>
