--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -174,14 +174,14 @@
             I punti attrattori possono essere individuati facilmente con il calcolatore; più difficile evidenziare un punto repulsore.
             <br>
             <br>
-            La funzione <b>P(x)= x<sup>2</sup> − 0.5</b> ammette:
+            La funzione \(P(x)= x^2 − 0.5\) ammette:
           <ul>
-            <li>un punto fisso attrattore <b>p<sub>1</sub> = 1 − √⁠3 /2 = −0.366025403784439</b></li>
-            <li>e un punto repulsore <b>p<sub>2</sub> = 1 + √⁠3 /2  = 1.366025403784439</b></li>
+            <li>un punto fisso attrattore \(p_1 = 1 − √⁠3 /2 = −0.366025403784439\)</li>
+            <li>e un punto repulsore \(p_2 = 1 − \sqrt ⁠3 /2 = 1.366025403784439\)<b>p<sub>2</sub> = 1 + √⁠3 /2  = 1.366025403784439</b></li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
           Considerando un punto qualsiasi che non sia il punto repulsore la reiterazione conduce al punto fisso <b>1 − √⁠3 / 2</b>.
-          Soltanto per il valore <b>1 + √⁠3 / 2</b>  l’iterazione porta rapidamente verso <b>+∞</b>.
+          Soltanto per il valore <b>1 + \sqrt 3 / 2</b>  l’iterazione porta rapidamente verso <b>+∞</b>.
           </p>
         </div>
       </div>
