--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -195,7 +195,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/15.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 15 <b>P(x)= x<sup>2</sup> − 0.5</b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 15 \(P(x)= x^2 − 0.5\)</p>
           </div>
         </div>
       </div>
@@ -209,7 +209,7 @@
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/16.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 16 <b>P(x)= x<sup>2</sup> − 0.5</b></p>
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 16 \(P(x)= x^2 − 0.5\)</p>
           </div>
         </div>
       </div>
