--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -118,7 +118,7 @@
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_01_diagramma_delle_orbite.html" target="_blank"><b>01.03.01. Diagramma delle Orbite</b></a></li>
               </ul>
-              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html" target="_blank"><b>01.04. Iterazioe nel Piano Complesso</b></a></li>
+              <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html" target="_blank"><b>01.04. Iterazione nel Piano Complesso</b></a></li>
               <ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html" target="_blank"><b>01.04.01. Insiemi di Julia</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_02_insieme_di_mandlbrot.html" target="_blank"><b>01.04.02. Insieme di Mandlbrot</b></a></li>
