--- a/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
+++ b/pages/learn/caos/01_02_03_punti_fissi_attrattori_e_punti_fissi_repulsori.html
@@ -176,8 +176,8 @@
             <br>
             La funzione \(P(x)= x^2 − 0.5\) ammette:
           <ul>
-            <li>un punto fisso attrattore \(p_1 = 1 − \sqrt{\frac{3}{2}} = −0.366025403784439\)</li>
-            <li>e un punto repulsore \(p_2 = 1 − \sqrt{\frac{3}{2}} = 1.366025403784439\)</li>
+            <li>un punto fisso attrattore \(p_1 = {\frac{1 − \sqrt 3}{2}} = −0.366025403784439\)</li>
+            <li>e un punto repulsore \(p_2 = {\frac{1 − \sqrt 3}{2}} = 1.366025403784439\)</li>
           </ul>
           <p class="mbr-text mbr-fonts-style display-7">
           Considerando un punto qualsiasi che non sia il punto repulsore la reiterazione conduce al punto fisso \(1 − \sqrt{\frac{3}{2}}\).
