--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -86,14 +86,14 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare z=𝜌( cos⁠(𝜑) +𝑗𝑠𝑖𝑛(𝜑))=𝜌∙ 𝑒↑𝑗𝜑 
 
+                    Il prodotto tra due numeri complessi può essere risolto algebricamente attraverso la rappresentazione cartesiana oppure attraverso la rappresentazione polare.
                   </p>
                 </div>
             </div>
@@ -107,8 +107,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_03_01_diagramma_delle_orbite.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/01_04_01_insiemi_di_julia.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
@@ -133,6 +133,8 @@
    <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
    <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
    <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
+   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
    <script>
    includeHTML();
    </script>
