--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -104,7 +104,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\phi) + j\sin (\phi) ) = \rho * \epsilon^{j^alpha}\).
+            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\phi) + j\sin (\phi) ) = \rho * \epsilon^{j\alpha}\).
             <br>
             <br>
             Il prodotto tra due numeri complessi può essere risolto algebricamente attraverso la rappresentazione cartesiana oppure attraverso la rappresentazione polare.
