--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -108,6 +108,16 @@
             <br>
             <br>
             Il prodotto tra due numeri complessi può essere risolto algebricamente attraverso la rappresentazione cartesiana oppure attraverso la rappresentazione polare.
+            <br>
+            <br>
+            <b>Rappresentazione cartesiana</b>
+            <br>
+
+            <br>
+            <b>Rappresentazione polare</b>
+            <br>
+            
+            <br>
           </p>
         </div>
       </div>
