--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -44,6 +44,11 @@
   <link rel="preload" as="style" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/mobirise/css/mbr-additional.css" type="text/css">
 
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+
   <!-- include internals -->
   <script>
     function includeHTML() {
@@ -104,7 +109,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\phi) + j\sin (\phi) ) = \rho * \epsilon^{j\alpha}\).
+            Ricordiamo che un numero complesso è caratterizzato da un modulo e una fase e può essere rappresentato in forma cartesiana \(z = x + jy\) oppure polare \(z = \rho ( \cos (\phi) + j\sin (\phi) ) = \rho * \epsilon ^{j\alpha}\).
             <br>
             <br>
             Il prodotto tra due numeri complessi può essere risolto algebricamente attraverso la rappresentazione cartesiana oppure attraverso la rappresentazione polare.
@@ -112,11 +117,11 @@
             <br>
             <b>Rappresentazione cartesiana</b>
             <br>
-
+            \(z = x + jy\)
             <br>
             <b>Rappresentazione polare</b>
             <br>
-            
+            \(z = x + jy\)
             <br>
           </p>
         </div>
@@ -161,9 +166,6 @@
     <script src="https://www.gabrielavelitch.com/assets/dropdown/js/navbar-dropdown.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
     <script src="https://www.gabrielavelitch.com/assets/theme/js/script.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script>
       includeHTML();
     </script>
 
