--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -117,7 +117,7 @@
             <br>
             <b>Rappresentazione cartesiana</b>
             <br>
-            \(z_1 = x_1 + jy_1 = \rho_1 * \epsilon ^{j\phi}\); 
+            \(z_1 = x_1 + jy_1 = \rho_1 * \epsilon ^{j\phi}\); \(z_2 = x_2 + jy_2 = \rho_2 * \epsilon ^{j\alpha}\); 
             <br>
             <b>Rappresentazione polare</b>
             <br>
