--- a/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
+++ b/pages/learn/caos/01_04_00_iterazione_nel_piano_complesso.html
@@ -121,7 +121,7 @@
             <br>
             <b>Rappresentazione polare</b>
             <br>
-            \(z_1 * z_2 = (x_1 + jy_1) * (x_2 + jy_2) = (x_1 * x_2 - y_1 * y_2) + j(x_1 * y_2 + y_1 * x_2)\)
+            \(z_1 * z_2 = (x_1 + jy_1) * (x_2 + jy_2) = (x_1 * x_2 - y_1 * y_2) + j(x_1 * y_2 + y_1 * x_2)\); \(z_1 * z_2 = \rho_1 * e^{j\phi} * \rho_2 * e^{j\alpha} = \rho_1 * \rho_2 * e^\rho_1 * e^{j(\phi + \alpha}\)
             <br>
           </p>
         </div>
